# exercism

./: Cargo.toml  README.md
blackjack/: blackjack.go
card-tricks/.exercism/: metadata.json
cars-assemble/.exercism/: metadata.json
golang/annalyns-infiltration/: annalyns_infiltration.go
golang/card-tricks/: card_tricks.go
golang/cars-assemble/: cars_assemble.go
golang/weather-forecast/: weather_forecast.go
golang/welcome-to-tech-palace/: welcome_to_tech_palace.go
hello-world/.exercism/: metadata.json
lasagna/: lasagna.go
lasagna/.exercism/: metadata.json
ruby/acronym/: acronym.rb
ruby/diamond/: diamond.rb
ruby/lasagna/: lasagna.rb
rust/: Cargo.toml  README.md
rust/armstrong-numbers/.exercism/: metadata.json
rust/armstrong-numbers/src/: lib.rs
rust/assembly-line/.exercism/: metadata.json
rust/assembly-line/src/: lib.rs
rust/beer-song/.exercism/: metadata.json
rust/beer-song/src/: lib.rs
rust/health-statistics/.exercism/: metadata.json
rust/hello-world/.exercism/: metadata.json
rust/low-power-embedded-game/src/: lib.rs
rust/lucians-luscious-lasagna/.exercism/: metadata.json
rust/magazine-cutout/src/: lib.rs
rust/resistor-color/.exercism/: metadata.json
rust/resistor-color/src/: lib.rs
rust/role-playing-game/.exercism/: metadata.json
rust/role-playing-game/src/: lib.rs
rust/rpn-calculator/.exercism/: metadata.json
rust/rpn-calculator/src/: lib.rs
rust/semi-structured-logs/src/: lib.rs
rust/tasks/magazine-cutout/.exercism/: metadata.json
rust/tasks/semi-structured-logs/.exercism/: metadata.json
(+22 files in other folders)
