[workspace]
members = [
  "rust/assembly-line",
  "rust/hello-world",
  "rust/lucians-luscious-lasagna",
  "rust/semi-structured-logs",
  "rust/semi-structured-logs",
  "rust/health-statistics",
  "rust/short-fibonacci",
  "rust/low-power-embedded-game",
  "rust/role-playing-game",
  "rust/magazine-cutout",
  "rust/rpn-calculator",
]