[workspace]
members = [
  "assembly-line",
  "hello-world",
  "lucians-luscious-lasagna",
  "semi-structured-logs",
  "semi-structured-logs",
  "health-statistics",
  "short-fibonacci",
  "low-power-embedded-game",
  "role-playing-game",
  "magazine-cutout",
  "rpn-calculator",
  "reverse-string",
  "gigasecond",
  "beer-song",
  "armstrong-numbers",
]